add JWT Authentication , registertion and login functions

--- a/Spotify/appsettings.json
+++ b/Spotify/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "AppSettings": {
+    "Token": "The Wise Man Once Said (Marawan Pablo): All Under Control Bitch ."
+
+  },
   "ConnectionStrings": {
     "DefaultConnection": "server=(localdb)\\localspotifydb;Database=localspotifydb;Trusted_Connection=true;MultipleActiveResultSets=true"
   },
